fixed webkit footer z-index issue (bug 749503)

--- a/media/css/mkt/site.less
+++ b/media/css/mkt/site.less
@@ -239,6 +239,14 @@ body {
     text-align: center;
 }
 
+// Fixes z-index footer issue on login page.
+.login #site-footer {
+    background-color: transparent;
+    background-image: none;
+    position: relative;
+    z-index: 5;
+}
+
 .hidden {
     display: none;
 }
